# testini

./: .gitignore  LICENSE  README.md
testini/: CMakeLists.txt  iniworker.cpp  iniworker.h  main.cpp  test_iniworker.cpp
testini/test/: a.ini  autf16be.ini  autf16le.ini  autf8BOM.ini
